--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -6,8 +6,9 @@ log4j.rootLogger=ERROR, A1
 #log4j.logger.ORG.oclc.os.SRW.Pears.SRWPearsDatabase=DEBUG
 #log4j.logger.ORG.oclc.os.SRW.Lucene.SRWLuceneDatabase=DEBUG
 #log4j.logger.ORG.oclc.os.SRW.DSpaceLucene.SRWLuceneDatabase=DEBUG
-log4j.logger.ORG.oclc.os.SRW.SRWDatabaseImpl=INFO
+#log4j.logger.ORG.oclc.os.SRW.SRWDatabaseImpl=INFO
 log4j.logger.ORG.oclc.os.SRW.SRWDatabase=INFO
+log4j.logger.ORG.oclc.os.SRW.SRWServlet=INFO
 #log4j.logger.ORG.oclc.os.SRW=DEBUG
 
 # A1 is set to be a ConsoleAppender.
