--- a/trunk/nbproject/private/private.properties
+++ b/trunk/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\levan\\.netbeans\\7.1\\tomcat70.properties
+deploy.ant.properties.file=C:\\Users\\Ralph\\AppData\\Roaming\\NetBeans\\8.0\\tomcat70.properties
 file.reference.axis.jar=lib/axis.jar
 file.reference.commons-discovery.jar=lib/commons-discovery.jar
 file.reference.commons-logging.jar=lib/commons-logging.jar
@@ -10,10 +10,10 @@ file.reference.saaj.jar=lib/saaj.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.wsdl4j.jar=lib/wsdl4j.jar
 file.reference.xalan.jar=lib/xalan.jar
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 7.0
-j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 7.0
+j2ee.server.home=C:/Apache Software Foundation/apache-tomcat-7.0.57
+j2ee.server.instance=tomcat70:home=C:\\Apache Software Foundation\\apache-tomcat-7.0.57
 javac.debug=true
 javadoc.preview=false
 jaxbwiz.endorsed.dirs=C:\\Program Files (x86)\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Users\\RALPH\\.netbeans\\6.9\\build.properties
+user.properties.file=C:\\Users\\Ralph\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
 libs.CopyLibs.classpath=lib/org-netbeans-modules-java-j2seproject-copylibstask.jar
