--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -28,6 +28,7 @@ excludes=
 file.reference.json-lib-2.2.2-jdk15.jar=lib/json-lib-2.2.2-jdk15.jar
 file.reference.icu4j-4_4_2.jar=lib/icu4j-4_4_2.jar
 file.reference.junit-4.10.jar=lib/junit-4.10.jar
+file.reference.junit-4.12.jar=C:\\Users\\Ralph\\Downloads\\junit-4.12.jar
 file.reference.org-netbeans-modules-java-j2seproject-copylibstask.jar=lib/org-netbeans-modules-java-j2seproject-copylibstask.jar
 file.reference.ostermillerutils.jar=lib/ostermillerutils.jar
 includes=**
@@ -64,7 +65,8 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.junit-4.10.jar}
+    ${file.reference.junit-4.10.jar}:\
+    ${file.reference.junit-4.12.jar}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
